# rinha-de-backend-2023

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
confg-files/: initdb.sql  nginx.conf
migrations/: env.py
migrations/versions/: 4f6c73da49f7_create_person_table.py  60cfb4893456_create_person_table.py  6ffbd0ede90f_added_new_attributes.py  c9651273e714_added_search_attr_to_person.py  d2477e526aea_added_index_to_id_and_search.py  daad122889c4_add_stack_to_person.py
rinha_de_backend_2023/: connection.py  main.py  models.py  schemes.py  settings.py
